--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,7 +1,7 @@
-# ansible-playbook deploy.yaml -i inventories/dev/hosts --vault-id ~/.tokens/master_id
+# ansible-playbook deploy.yaml -i inventories/prod/hosts --vault-id ~/.tokens/master_id
 
-- hosts: all
-  strategy: free
+- hosts: tools
+  strategy: linear
 
   tasks:
 
