--- a/group_vars/all/main.yaml
+++ b/group_vars/all/main.yaml
@@ -18,6 +18,8 @@ directories_ssl_certificates_host: '{{ directories_ssl_certificates }}'
 
 
 # routers/middleware
-proxy_domain: organizr.diesel.net
+proxy_domains: 
+  - organizr.diesel.net
+  - home.diesel.net
 repo_branch: '{{ git_repository }}-{{ git_branch }}'
 proxy_router_main: '{{ repo_branch }}-main'
