--- a/deploy.yaml
+++ b/deploy.yaml
@@ -10,15 +10,8 @@
       args:
         warn: no
 
-    - name: Render docker-compose.yaml file
-      template:
-        src: "docker-compose.yaml.j2"
-        dest: "{{ directories_files }}/docker-compose.yaml"
-
-    - name: Execute `Docker stack deploy`
-      shell: >
-        docker stack deploy 
-        --with-registry-auth 
-        --prune 
-        -c {{ directories_files }}/docker-compose.yaml 
-        {{ docker_stack }}
+    - name: Render docker-compose.yaml & deploy stack
+      import_role:
+        name: docker-deploy
+      vars:
+        with_registry: no
