--- a/.drone.yaml
+++ b/.drone.yaml
@@ -11,7 +11,7 @@ steps:
     image: plugins/ansible:3
     settings:
       playbook: deploy.yaml
-      inventory: inventories/prod/hosts
+      inventory: inventories/production/hosts
       private_key:
         from_secret: ansible_private_key
       vault_password:
