Add missing requirements yaml file

--- a/.drone.yaml
+++ b/.drone.yaml
@@ -11,6 +11,7 @@ steps:
     image: plugins/ansible:3
     settings:
       playbook: deploy.yaml
+      galaxy: roles/requirements.yaml
       inventory: inventories/production/hosts
       private_key:
         from_secret: ansible_private_key
