--- a/.drone.yaml
+++ b/.drone.yaml
@@ -9,10 +9,32 @@ clone:
 steps:
   - name: deploy
     image: plugins/ansible:3
+    environment:
+      ANSIBLE_CONFIG: .ansible/ansible.cfg
     settings:
-      playbook: deploy.yaml
-      galaxy: roles/requirements.yaml
-      inventory: inventories/production/hosts
+      playbook: .ansible/deploy.yaml
+      galaxy: .ansible/roles/requirements.yaml
+      inventory: .ansible/inventory/development/hosts
+      private_key:
+        from_secret: ansible_private_key
+      vault_password:
+        from_secret: ansible_vault_password
+
+trigger:
+  branch:
+    - development
+  event:
+    - push
+---
+
+  - name: deploy
+    image: plugins/ansible:3
+    environment:
+      ANSIBLE_CONFIG: .ansible/ansible.cfg
+    settings:
+      playbook: .ansible/deploy.yaml
+      galaxy: .ansible/roles/requirements.yaml
+      inventory: .ansible/inventory/production/hosts
       private_key:
         from_secret: ansible_private_key
       vault_password:
