--- a/.drone.yaml
+++ b/.drone.yaml
@@ -30,6 +30,10 @@ kind: pipeline
 type: docker
 name: production pipeline
 
+clone:
+  depth: 1
+
+steps:
   - name: deploy
     image: plugins/ansible:3
     environment:
