--- a/.ansible/group_vars/all/main.yaml
+++ b/.ansible/group_vars/all/main.yaml
@@ -16,3 +16,4 @@ directories_ssl_certificates_host: '{{ directories_ssl_certificates }}'
 # routers/middleware
 repo_branch: '{{ git_repository }}-{{ git_branch }}'
 proxy_router_main: '{{ repo_branch }}-main'
+proxy_router_main_strip: '{{ repo_branch }}-main-strip' 
