update role and domain

--- a/.ansible/deploy.yaml
+++ b/.ansible/deploy.yaml
@@ -10,8 +10,5 @@
       args:
         warn: no
 
-    - name: Render docker-compose.yaml & deploy stack
-      import_role:
-        name: docker-deploy
-      vars:
-        with_registry: no
+    - import_role:
+        name: docker_deploy
