--- a/.drone.yaml
+++ b/.drone.yaml
@@ -1,7 +1,7 @@
 ---
 kind: pipeline
 type: docker
-name: development pipeline
+name: Install Organizer Landing Page
 
 clone:
   depth: 1
@@ -14,41 +14,19 @@ steps:
     settings:
       playbook: .ansible/deploy.yaml
       galaxy: .ansible/roles/requirements.yaml
-      inventory: .ansible/inventory/development/hosts
       private_key:
         from_secret: ansible_private_key
       vault_password:
         from_secret: ansible_vault_password
+    commands:
+      # dynamically select inventory based on Git branch/tag
+      - version=$DRONE_BRANCH
+      - if [ ! -z $DRONE_TAG ]; then version=production; fi
+      - /bin/drone-ansible --inventory .ansible/inventory/$$version/hosts
 
 trigger:
   branch:
     - development
-  event:
-    - push
----
-kind: pipeline
-type: docker
-name: production pipeline
-
-clone:
-  depth: 1
-
-steps:
-  - name: deploy
-    image: plugins/ansible:3
-    environment:
-      ANSIBLE_CONFIG: .ansible/ansible.cfg
-    settings:
-      playbook: .ansible/deploy.yaml
-      galaxy: .ansible/roles/requirements.yaml
-      inventory: .ansible/inventory/production/hosts
-      private_key:
-        from_secret: ansible_private_key
-      vault_password:
-        from_secret: ansible_vault_password
-
-trigger:
-  branch:
     - stable
   event:
     - push
